--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/sqlite3": "^3.1.11",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "form-data": "^4.0.3",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
