--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/sqlite3": "^3.1.11",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "form-data": "^4.0.3",
@@ -22,7 +23,8 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
