--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "next": "14.2.3",
+    "next": "^14.2.30",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.34.3",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
