feat: 增强 IIS 部署并统一上传路径
此提交对项目的 IIS 部署策略进行了重大改进，并重构了文件上传机制。

主要变更包括：
- **统一上传路径**：所有用户上传的文件（二维码和比赛封面）现在都存储在 `public/uploads` 单一目录下。这简化了文件管理和 IIS 虚拟目录配置。
- **健壮的 IIS 配置**：`web.config` 已更新，包含：
    - **强制 HTTPS 重定向**：所有 HTTP 请求现在都永久重定向到 HTTPS，增强了安全性和 SEO。
    - **优化的 Next.js 代理**：改进了处理根请求、通过 IIS 虚拟目录服务物理文件以及将动态内容代理到 Next.js 服务器的规则。
- **动态图片配置**：`next.config.mjs` 现在动态地从环境变量 (`PUBLIC_HOSTNAME`) 读取公共主机名，消除了硬编码的域名，提高了部署灵活性。
- **更新的 IIS 部署文档**：`deploy/iis/README.md` 已全面更新，以反映 IIS 部署的最佳实践，包括虚拟目录设置和 PM2 使用。
- **错误修复**：修复了比赛创建 API (`src/app/api/tournaments/route.ts`) 中与封面图片上传相关的类型错误和逻辑错误。
- **改进的 Git 忽略规则**：`.gitignore` 已更新，包含了更多常见的忽略模式，确保 `package-lock.json` 被跟踪，并重新组织了条目以提高清晰度和可维护性。

--- a/deploy/iis/web.config
+++ b/deploy/iis/web.config
@@ -3,7 +3,33 @@
     <system.webServer>
         <rewrite>
             <rules>
-                <rule name="Reverse Proxy to Next.js" stopProcessing="true">
+                <!-- Rule 0: Force HTTPS Redirection -->
+                <rule name="Force HTTPS" enabled="true" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="^OFF$" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+                </rule>
+
+                <!-- Rule 1: Specifically rewrite the root request to the Next.js server -->
+                <rule name="RewriteRootToNext" stopProcessing="true">
+                    <match url="^$" />
+                    <action type="Rewrite" url="http://localhost:3000/" />
+                </rule>
+
+                <!-- Rule 2: Let IIS handle requests for physical files directly.
+                     This works for your virtual directories. -->
+                <rule name="ServePhysicalFiles" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" />
+                    </conditions>
+                    <action type="None" /> <!-- Do nothing, let IIS handle it -->
+                </rule>
+
+                <!-- Rule 3: Proxy all other requests (non-file, non-root) to Next.js -->
+                <rule name="ProxyToNext" stopProcessing="true">
                     <match url="(.*)" />
                     <action type="Rewrite" url="http://localhost:3000/{R:1}" />
                 </rule>
