feat: 优化 Toast 提示样式并替换 alert
此提交将应用中的 `alert` 提示替换为 `react-hot-toast`，并对 Toast 提示的样式进行了初步的国风主题化配置。

主要变更包括：
- **安装 `react-hot-toast`**：添加 `react-hot-toast` 依赖。
- **全局配置 Toast 样式**：
  - `src/app/layout.tsx`：在 `Toaster` 组件中配置了 `toastOptions`，包括背景色（深숯灰）、文字颜色（象牙白）、边框颜色（暗金），以及成功和错误提示的图标颜色（暗金和朱砂红）。
- **替换 `alert` 提示**：
  - `src/app/tournaments/[id]/edit/page.tsx`：将所有 `alert()` 调用替换为 `toast.success()` 或 `toast.error()`，以提供更友好的用户体验。
- **文档更新**：
  - `docs/implemented_features.md`：更新了相关功能描述，反映了 Toast 提示的引入。

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "sharp": "^0.34.3",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
