chore(config): 调整.gitignore中环境变量的顺序
为了与Next.js框架的环境变量加载优先级保持一致，本次提交对`.gitignore`文件进行了调整。

主要改动：
- 根据Next.js在生产环境中的加载顺序，重新排列了`.env*`文件的忽略规则。新的顺序为：
  1. `.env.production.local`
  2. `.env.local`
  3. `.env.production`
  4. `.env`

这项改动确保了`.gitignore`文件的配置更加规范，并准确反映了项目的构建和部署行为。

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Environment variables
+.env.production.local
 .env.local
-.env.development
-.env.test
 .env.production
+.env
 
 # Dependency directories
 node_modules/
