修复安全隐患和优化代码：
1. 移除了未使用的selectWinner.tsx页面组件
2. 修复了middleware.ts中的路由配置错误
3. 修复了所有硬编码的JWT_SECRET默认值，提高应用安全性
4. 更新了玩家主页上的文本显示格式，将提示信息分为两行显示
5. 从文档中移除了对已删除组件的引用

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ PUBLIC_HOSTNAME=your-domain.com
 
 # Secret key for JSON Web Token (JWT) authentication.
 # This should be a long, random, and secure string.
+# You can generate one with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 # DO NOT use this exact value in production.
 JWT_SECRET=your-super-strong-and-secret-jwt-key
